// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBadge.tsx should match snapshot with badge slot and { content: '10', max: 9 } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { content: '10', max: 11 } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { content: 'foo', max: 9 } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { dot: true } props 1`] = `
<div class="v-badge v-badge--dot v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { dot: true, floating: true } props 1`] = `
<div class="v-badge v-badge--dot v-badge--floating v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { floating: true } props 1`] = `
<div class="v-badge v-badge--floating v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { floating: true } props 2`] = `
<div class="v-badge v-badge--floating v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { icon: 'foo' } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { inline: true } props 1`] = `
<div class="v-badge v-badge--inline v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { location: 'bottom-left' } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { location: null } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { location: undefined } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { modelValue: false } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
            style="display: none;"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot with badge slot and { modelValue: true } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot without badge slot and { content: 'foo' } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span class="v-badge__content">
          foo
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot without badge slot and { content: 'foo', icon: 'bar' } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <i class="bar mdi v-icon notranslate v-icon--size-default"
           aria-hidden="true"
        >
        </i>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge.tsx should match snapshot without badge slot and { icon: 'foo' } props 1`] = `
<div class="v-badge v-theme--light">
  <div class="v-badge__wrapper">
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <i class="foo mdi v-icon notranslate v-icon--size-default"
           aria-hidden="true"
        >
        </i>
      </span>
    </transition-stub>
  </div>
</div>
`;
